5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1671_1880.log
== TEST (2019-04-24 15:25:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print()"dezembro")
-- ERROR:
File "XXXX", line 27
    print()"dezembro")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:25:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:25:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
-- EXECUTION TIME:
0.129396
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:25:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
-- EXECUTION TIME:
0.138887
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:25:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:25:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
-- EXECUTION TIME:
0.186752
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
m:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:25:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:26:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:26:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.157442
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:26:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:26:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:26:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.182387
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.209082
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
maio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.233019
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
maio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.351063
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
numero do mes invalido
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
abril
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.639765
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
maio
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.768277
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
maio
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
numero do mes invalido
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
abril
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.879038
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
numero do mes invalido
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
numero do mes invalido
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
abril
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.475939
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
numero do mes invalido
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:

-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.381774
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
numero do mes invalido
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
abril
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
maio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.400264
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
maio
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.354271
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.509609
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
maio
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
numero do mes invalido
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
abril
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.482407
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
numero do mes invalido
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
abril
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
maio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.459452
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:

-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
maio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.495171
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
numero do mes invalido
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
maio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.486446
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
maio
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
numero do mes invalido
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.484012
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
m:numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.491001
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
numero do mes invalido
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.553634
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
maio
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
numero do mes invalido
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:28:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("m:"))

if (m == 1):
	print("janeiro")
elif (m == 2):
	print("fevereiro")
elif (m == 3):
	print("marco")
elif (m == 4):
	print("abril")
elif (m == 5):
	print("maio")
elif (m == 6):
	print("junho")
elif (m == 7):
	print("julho")
elif (m == 8):
	print("agosto")
elif (m == 9):
	print("setembro")
elif (m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.142998
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
